<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".acivities.LogIn">

    <TextView
        android:id="@+id/txt_app_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:text="@string/txt_login"
        android:textAlignment="center"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/edt_username_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_app_label"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:hint="@string/hint_username"
        android:importantForAutofill="no"
        android:inputType="text"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/edt_password_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edt_username_login"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:hint="@string/hint_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        tools:targetApi="o" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edt_password_login"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:background="@color/btn_login"
        android:text="@string/btn_login" />

    <TextView
        android:id="@+id/txt_create_new_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_login"
        android:text="@string/sign_up"
        android:textAlignment="center" />

</RelativeLayout>