<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp">

    <TextView
        android:id="@+id/widget_txt_user_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_login" />

    <TextView
        android:id="@+id/widget_txt_user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/widget_txt_user_id"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:text="@string/txt_username"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/widget_txt_user_mobile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/widget_txt_user_name"
        android:text="@string/txt_mobile" />

    <ImageButton
        android:id="@+id/btn_delete_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:background="@drawable/ic_delete_36dp"
        android:contentDescription="@string/todo" />

    <ImageButton
        android:id="@+id/btn_edit_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/btn_delete_user"
        android:layout_centerVertical="true"
        android:layout_marginStart="-50dp"
        android:background="@drawable/ic_edit_36dp"
        android:contentDescription="@string/todo" />


</RelativeLayout>